@@ -27,6 +27,7 @@
     adorn,
     axes=TRUE,
     main="",
+    myaxis,
     debug=getOption("oceDebug"),
     \dots)
 }
@@ -113,6 +114,8 @@
         drawing the data panel.}     
     \item{axes}{logical, set \code{TRUE} to get axes on the main image.}
     \item{main}{title for plot.}
+    \item{myaxis}{optional replacement function for \code{axis()}, passed to
+        \code{\link{drawPalette}}.}
     \item{debug}{a flag that turns on debugging.  Set to 1 to get a
         moderate amount of debugging information, or to 2 to get more.} 
     \item{\dots}{optional arguments passed to plotting functions.}
