@@ -1,4 +1,5 @@
 0.9-14
+- imagep() and drawPalette() new argument 'myaxis' (suggestion of C. Richards)
 - landsat support added
 - drawPalette() has new arg 'pos'
 - plotProfile() and plotTS() get new argument 'pt.bg'
